Fix fonts way too big in peak info table for non-responsive

--- a/scss/site/_peakinfo.scss
+++ b/scss/site/_peakinfo.scss
@@ -35,6 +35,10 @@
             white-space: normal;
         }
 
+        .options li > a {
+            font-size: 0.86em;
+        }
+
         .sauce-svg-icon {
             width: 1.3em;
             height: 1.3em;
